# PlotJuggler

./: CMakeLists.txt
include/PlotJuggler/: database_loader_base.h
plotter_gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
plugins/DataLoadMongoDB/: CMakeLists.txt  dataload_mongodb.cpp  dataload_mongodb.h  dialog_select_mongodb_collections.cpp  dialog_select_mongodb_collections.h  dialog_select_mongodb_collections.ui
plugins/DataStreamBB/: CMakeLists.txt  datastream_bb.cpp  datastream_bb.h  dialog_select_bb_variables.cpp  dialog_select_bb_variables.h  dialog_select_bb_variables.ui
